kubernetes/main/apps/tekton-system/tekton/app/http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tekton
  namespace: tekton-pipelines
  annotations:
    external-dns/unifi: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Tekton Dashboard for Tekton Pipelines
    gethomepage.dev/group: Development
    gethomepage.dev/icon: si-tekton
    gethomepage.dev/name: Tekton
    gethomepage.dev/pod-selector: app.kubernetes.io/name=dashboard
  labels:
    app.kubernetes.io/instance: tekton-dashboard
    app.kubernetes.io/name: tekton-dashboard
spec:
  hostnames:
    - tekton.techtales.io
  parentRefs:
    - name: envoy
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: tekton-dashboard
          port: 9097
      matches:
        - path:
            type: PathPrefix
            value: /
